--- a/templates/news_feed.html
+++ b/templates/news_feed.html
@@ -389,7 +389,7 @@
 							<button class="btn btn-primary btn-sm" aria-hidden="true" type="submit">Post</button>
 							<ul class="pull-left list-inline">
 								<!-- <li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li> -->
-								<input type="file" name="image" size="40" id="image">
+								<input type="file" name="image" size="40" id="image" accept="image/*">
 								<!-- <li><a href=""><i class="glyphicon glyphicon-camera"></i></a></li> -->
 								<!-- <li><a href=""><i class="glyphicon glyphicon-map-marker"></i></a></li> -->
 							</ul>
