--- a/templates/chat.html
+++ b/templates/chat.html
@@ -92,7 +92,7 @@
                                             <input type="hidden" name="message_to_send" id="message_to_send" value="">
                                             <!-- <button type="submit"> -->
                                             <span class="name-meta">{{ friend['username'] }}</span>
-                                            <span class="email-meta">{{ friend['email'] }}</span>
+                                            (<span class="email-meta">{{ friend['email'] }}</span>)
                                             <!-- <button type="submit"></button> -->
                                             <!-- </button> -->
                                             <!-- <script>console.log("{{friend}}")</script> -->
